Ensure overflow content display does not clip off page when layout is not "notation left"

--- a/app/static/css/bottom.css
+++ b/app/static/css/bottom.css
@@ -53,3 +53,8 @@
 #markupToolsMenu {
   flex-direction: column;
 }
+
+.control-menu-overflow-content {
+  left: auto;
+  right: 0;
+}
