--- a/app/static/css/right.css
+++ b/app/static/css/right.css
@@ -52,3 +52,8 @@
 .markupGrp {
   flex-wrap: wrap;
 }
+
+.control-menu-overflow-content {
+  left: auto;
+  right: 0;
+}
