--- a/app/static/css/top.css
+++ b/app/static/css/top.css
@@ -57,3 +57,8 @@
 #markupToolsMenu {
   flex-direction: column;
 }
+
+.control-menu-overflow-content {
+  left: auto;
+  right: 0;
+}
